# 3dHPB

./: .gitignore  QIBA-CT-Liver-Phantom_20210422-manifest.tcia  commands.txt  pyproject.toml  requirements.txt
HannahData/awsOutput/hepaticvessel_002/: meta.json
HannahData/awsOutput/hepaticvessel_008/: meta.json
HannahData/awsOutput/hepaticvessel_010/: meta.json
awsServer/: dicom2nifit.py  server.py
hpbviz/: __init__.py  app.py  io.py  mesh.py  metrics.py  preprocess.py  remote.py  remote_client.py  segment.py  viewer.py
hpbviz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hpbviz/ui/: __init__.py  actions.py  sidebar.py  theme.py
