[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hpbviz"
version = "0.0.1"
description = "HPB 3D Visualizer MVP"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "SimpleITK",
  "pydicom",
  "napari[all]",
  "scikit-image",
  "pyvista",
  "magicgui"
]

[project.scripts]
hpbviz = "hpbviz.app:main"

[tool.setuptools.packages.find]
include = ["hpbviz*"]
